fix: header positioning on mobiles

--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -47,6 +47,10 @@ html {
 
 body {
 	color: var(--main-text);
+
+	@include media($mobile-bp) {
+		overflow-x: hidden;
+	}
 }
 
 body,
