--- a/src/modules/layout/components/Layout/Layout.module.scss
+++ b/src/modules/layout/components/Layout/Layout.module.scss
@@ -7,6 +7,5 @@
 
 	@include media($mobile-bp) {
 		padding-inline: 20px;
-		overflow-x: hidden;
 	}
 }
